--- a/action.yml
+++ b/action.yml
@@ -21,7 +21,7 @@ outputs:
 
 runs:
   using: 'node20'
-  main: 'index.js'
+  main: 'dist/index.js'
 
 # Optional: post cleanup (not needed here)
 # post: 'dist/post.js'
